--- a/package.json
+++ b/package.json
@@ -25,7 +25,10 @@
     "typography-plugin-code": "^0.15.0"
   },
   "devDependencies": {
-    "gh-pages": "^0.12.0"
+    "gh-pages": "^0.12.0",
+    "safe-access": "^0.1.0",
+    "underscore": "^1.8.3",
+    "underscore.string": "^3.3.4"
   },
   "keywords": [
     "gatsby"
