--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "typography-plugin-code": "^0.15.0"
   },
   "devDependencies": {
+    "datocms-client": "^0.3.15",
     "gh-pages": "^0.12.0",
     "safe-access": "^0.1.0",
     "underscore": "^1.8.3",
