--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [build]
-  command = "./node_modules/.bin/dato dump --token=SITE_SPECIFIC_READ_ONLY_API_KEY && npm run build"
+  command = "./node_modules/.bin/dato dump --token=$DATO_READ_ONLY_API_KEY && npm run build"
   publish = "public"
 
 [template.environment]
