remove netlify.toml.sample. update build command in netlify.toml

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,7 @@
 [build]
-  command = "npm run build"
+  command = "./node_modules/.bin/dato dump --token=$DATO_READ_ONLY_API_KEY && npm run build"
   publish = "public"
-  
+
 [template.environment]
   NODE_ENV = "production"
   YARN_VERSION = "0.18.0"
