--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "build": "gatsby build",
     "deploy": "gatsby build --prefix-links && gh-pages -d public",
     "develop": "gatsby develop",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dato-dump": "./node_modules/.bin/dato dump --token=$DATO_DUMP_KEY"
   }
 }
