--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "deploy": "gatsby build --prefix-links && gh-pages -d public",
     "develop": "gatsby develop",
     "format": "prettier --trailing-comma es5 --no-semi --single-quote --write \"pages/*.js\" \"utils/*.js\" \"wrappers/*.js\" \"html.js\"",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dato-dump": "./node_modules/.bin/dato dump --token=$DATO_DUMP_KEY"
   }
 }
