--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "gatsby": "^0.12.45",
     "object-assign": "^4.1.1",
+    "prop-types": "^15.5.10",
     "react-helmet": "^5.0.3",
     "react-typography": "^0.15.0",
     "typography": "^0.15.8",
